--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     },
     "dependencies": {
         "leader-line": "^1.0.7",
-        "sirv-cli": "^2.0.0"
+        "moment": "^2.29.2",
+        "sirv-cli": "^2.0.0",
+        "svelte-gantt": "^4.0.3-beta"
     }
 }
